@@ -144,7 +144,7 @@
 		<jar destfile="${jar.name}" filesetmanifest="mergewithoutmain">
 			<manifest>
 				<attribute name="Main-Class" value="${main.class}" />
-				<attribute name="Class-Path" value="./ sqlitejdbc-v056.jar jai_core.jar jai_codec.jar lib/jai_core.jar lib/jai_codec.jar sqlitejdbc-*.jar jai_*.jar lib/jai_*.jar" />
+				<attribute name="Class-Path" value="./ sqlite.jar sqlitejdbc-v056.jar jai_core.jar jai_codec.jar lib/jai_core.jar lib/jai_codec.jar jai_*.jar lib/jai_*.jar" />
 			</manifest>
 			<zipfileset src="lib/log4j-1.2.15.jar" includes="org/apache/log4j/**" />
 			<zipfileset src="lib/je-${je-version}.jar" />
@@ -153,7 +153,7 @@
 			<zipfileset src="lib/commons-io-2.0.jar" includes="**/*.class" />
 			<zipfileset src="lib/javapng-2.0.jar" includes="**/*.class" />
 			<zipfileset src="lib/Tidy.jar" includes="org/w3c/tidy/**" />
-			<zipfileset src="lib/itextpdf-5.1.0.jar" />
+			<zipfileset src="lib/itextpdf-5.1.0.jar" includes="com/**" />
 			<fileset dir="build/mobac">
 				<exclude name="**/unittest/**" />
 				<exclude name="mobac/mapsources/mapapcks/**" />
